--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postuninstall": "electron-builder install-app-deps"
   },
   "main": "background.js",
+  "extraResources": ["bin/*"],
   "dependencies": {
     "@mdi/font": "5.9.55",
     "core-js": "^3.6.5",
